@@ -31,6 +31,18 @@ import com.bbn.parliament.jena.handler.UpdateHandler;
 
 @Service
 public class GraphStoreService {
+	private static final String INSERT_RESPONSE_BODY = ""
+		+ "<html>\n"
+		+ "	<head>\n"
+		+ "		<meta http-equiv=\"Content-Type\" content=\"text/html; charset=%4$s\"/>\n"
+		+ "		<title>%2$s (%1$d) Inserted %3$d statements</title>\n"
+		+ "	</head>\n"
+		+ "	<body>\n"
+		+ "		<h2>HTTP %2$s: %1$d</h2>\n"
+		+ "		<p>Inserted %3$d statements.</p>\n"
+		+ "	</body>\n"
+		+ "</html>";
+
 	@SuppressWarnings("static-method")
 	public ResponseEntity<StreamingResponseBody> doGetGraph(String graphUri, String format,
 		HttpHeaders headers, HttpServletRequest request) {
@@ -53,11 +65,11 @@ public class GraphStoreService {
 		String option = (dropGraphOption == DropGraphOption.SILENT)
 			? "SILENT" : "";
 		if (graphUri == null || graphUri.isEmpty()) {
-			updateStmt = "DROP %1$s DEFAULT ;".formatted(option);
+			updateStmt = String.format("DROP %1$s DEFAULT ;", option);
 		} else if (ModelManager.inst().containsModel(graphUri)) {
-			updateStmt = "DROP %1$s GRAPH <%2s> ;".formatted(option, graphUri);
+			updateStmt = String.format("DROP %1$s GRAPH <%2s> ;", option, graphUri);
 		} else {
-			throw new MissingGraphException("Named graph <%1$s> does not exist".formatted(graphUri));
+			throw new MissingGraphException("Named graph <%1$s> does not exist", graphUri);
 		}
 
 		if (updateStmt != null) {
@@ -125,18 +137,8 @@ public class GraphStoreService {
 		HttpStatus status = HttpStatus.OK;
 		final Charset charSet = StandardCharsets.UTF_8;
 		MediaType responseContentType = new MediaType(MediaType.TEXT_HTML, charSet);
-		String body = """
-			<html>
-				<head>
-					<meta http-equiv="Content-Type" content="text/html; charset=%4$s"/>
-					<title>%2$s (%1$d) Inserted %3$d statements</title>
-				</head>
-				<body>
-					<h2>HTTP %2$s: %1$d</h2>
-					<p>Inserted %3$d statements.</p>
-				</body>
-			</html>
-			""".formatted(status.value(), status.name(), numStatements, charSet.name());
+		String body = String.format(INSERT_RESPONSE_BODY,
+			status.value(), status.name(), numStatements, charSet.name());
 		return ResponseEntity.status(status)
 			.contentType(responseContentType)
 			.body(body);
